--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <section class="aaa">
-        <img src="./eisenhower-matrix.jpg">
+        <img alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
         <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </section>
       <div class="centered-main-page-element">
@@ -30,7 +30,7 @@
               <input type="text" class="task">
               <button class="edit">Edit</button>
               <button class="delete">
-                <img src="./remove.svg">
+                <img alt="remove" src="./remove.svg">
               </button>
             </li>
             <li class="editMode">
@@ -39,7 +39,7 @@
               <input type="text" value="Go Shopping" class="task">
               <button class="edit">Save</button>
               <button class="delete">
-                <img src="./remove.svg">
+                <img alt="remove" src="./remove.svg">
               </button>
             </li>
           </ul>
@@ -53,7 +53,7 @@
               <input type="text" class="task">
               <button class="edit">Edit</button>
               <button class="delete">
-                <img src="./remove.svg">
+                <img alt="remove" src="./remove.svg">
               </button>
           </li>
           </ul>
