--- a/index.html
+++ b/index.html
@@ -5,55 +5,57 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <main>
-      <section class="aaa">
-        <img alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
-        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <section class="matrix">
+        <img class="matrix__img" alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
+        <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </section>
-      <div class="centered-main-page-element">
-        <section id="topSectionForAddingElementToList">
-            <h3>
-              <label for="new-task">Add Item</label>
-            </h3>
-            <div class="task-row-wrapper">
-              <input id="new-task"class="task" type="text">
-              <button>Add</button>
+      <div class="tasks">
+        <section class="new-tasks">
+            <div class="tasks-list">
+              <h3 class="title">
+                <label class="tasks-list__label tasks-list__label_new" for="new-task">Add Item</label>
+              </h3>
+              <div class="tasks-list__row-wrapper">
+                <input class="tasks-list__input tasks-list__input_new" id="new-task" type="text">
+                <button class="button">Add</button>
+              </div>
             </div>
         </section>
-        <section>
-          <h3>Todo</h3>
-          <ul id="incompleteTasks">
-            <li>
-              <input type="checkbox">
-              <label class="task">Pay Bills</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img alt="remove" src="./remove.svg">
+        <section class="todo-tasks">
+          <h3 class="title">Todo</h3>
+          <ul class="tasks-list">
+            <li class="tasks-list__item">
+              <input class="tasks-list__input_checkbox" type="checkbox">
+              <label class="tasks-list__label">Pay Bills</label>
+              <input type="text" class="tasks-list__input tasks-list__input_removed">
+              <button class="button button_edit">Edit</button>
+              <button class="button button_delete">
+                <img class="button_delete__img" alt="remove" src="./remove.svg">
               </button>
             </li>
-            <li class="editMode">
-              <input type="checkbox">
-              <label class="task">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task">
-              <button class="edit">Save</button>
-              <button class="delete">
-                <img alt="remove" src="./remove.svg">
+            <li class="tasks-list__item tasks-list__item_edit">
+              <input class="tasks-list__input_checkbox" type="checkbox">
+              <label class="tasks-list__label tasks-list__label_edit">Go Shopping</label>
+              <input type="text" value="Go Shopping" class="tasks-list__input tasks-list__input_edit">
+              <button class="button button_edit">Save</button>
+              <button class="button button_delete">
+                <img class="button_delete__img" alt="remove" src="./remove.svg">
               </button>
             </li>
           </ul>
         </section>
-        <section>
-          <h3>Completed</h3>
-          <ul id="completed-tasks">
-            <li>
-              <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img alt="remove" src="./remove.svg">
+        <section class="completed-tasks">
+          <h3 class="title">Completed</h3>
+          <ul class="tasks-list">
+            <li class="tasks-list__item">
+              <input class="tasks-list__input_checkbox" type="checkbox" checked>
+              <label class="tasks-list__label tasks-list__label_completed" class="task">See the Doctor</label>
+              <input type="text" class="tasks-list__input tasks-list__input_removed">
+              <button class="button button_edit">Edit</button>
+              <button class="button button_delete">
+                <img class="button_delete__img" alt="remove" src="./remove.svg">
               </button>
           </li>
           </ul>
