--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         </section>
       </div>
     </main>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
